[tool.poetry]
name = "youtube-analytics-project"
version = "0.1.0"
description = ""
authors = ["Arina Astanina <timyr.kiyan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
isodate = "^0.6.1"
isodate = "^0.6.1"
rdflib = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

